# slisp

./: .gitignore  .markdownlint.json  404.html  LICENSE  README.md  build_docs.sh  copy-success.sh  debugging.d  example.asd  external.d  extraops.d  index.html  install-std.sh  iterating.d  lisp-file-stat.d  lmathlib.d  loslib.d  lstringlib.d  makefile  mathstd.d  meson.build  mkdocs.yml  operators.d  os.asd  package.spi  reproduce.sh  sal_auxlib.d  sal_builtins.d  sal_shared_api.d  sal_std.d  sal_test.d  sal_type.d  salinterp.d  salmon-impl.d  salmon.d  sarithmetic.d  slispBible.aux  slispBible.fdb_latexmk  slispBible.fls  slispBible.out  (+7 more)
Bible/: index.html
FAQ/: index.html
Lib/polkit/: polkit.asd  readme.md
Meta/: build.sh  standard.sh
SLib/: index.html
SLib/Iterating/: index.html
Style/Consistency/: index.html
Style/Parenthesis/: index.html
docs/: .gitignore  0peoplewillusesalmon.md  Bible.md  FAQ.md  _config.yml  index.md  slispBible.tex
docs/API/: auxillary.html  builtins.html  index.md  sharedAPI.html
docs/Handbook/: Type_Safety.md  index.md
docs/Language/: Comparisons.md  Control_flow.md  Custom.md  Diff.md  Errors.md  Functions.md  Iterator_Variables.md  Mode.md  Optimizing.md  Parser.md  The_SPI.md  index.md
docs/SLib/: Iterating.md  index.md
docs/Standard/: Input.md  Math.md  curl.md  index.md  spec.md  std.md
ports/: README.md
search/: search_index.json
spi/: GNUmakefile  main.d
std-src/: README.md  lcurl.d  linputlib.d  makefile  test-spi.asd
svm/: svm.d
testes/: advfun.asd  asin.asd  asinh.asd  async.asd  atan.asd  basic-value.asd  betterintersection.asd  broker.asd  btrassert.asd  btrlen.asd  btrless.asd  cases.asd  cdr-car.asdf  color-wip.asd  comb.asd  compile.asd  correct.asd  correction.asd  custom.asd  distance.asd  doc-example.asd  easteregg.asd  ecase.asd  escape.asd  even.asd  example.asd  example.com.asd  facfunc.asd  factorial-std.asd  factorial.asd  fail-import.asd  fib.asd  fixless.asd  floating.asd  fn_not_exist.asd  fsys.asd  fun.asd  function-lexer.asd  functional-download.asd  gettype.asd  (+59 more)
unit-tests/: at.asd  coloresc.asd  escape.asd  func.asd  indent.asd  iterable.asd  os.asd  range.asd  required.asd  type-check.asd  while-loop.asd  x2.asd
(+89 files in other folders)
